edit Admin to Project

--- a/Personal.html
+++ b/Personal.html
@@ -104,11 +104,11 @@
   <div class="container-fluid">
   
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="file:///D:/Project/WebReport/DailyReport.html">Daily Report</a></li>
-      <li><a href="file:///D:/Project/WebReport/test.html">Test</a></li>
-	  <li ><a href="file:///D:/Project/WebReport/Admin.html">Project</a></li>
-	  <li class="active"><a href="file:///D:/Project/WebReport/Personal.html">Personnel</a></li>
+         <li><a href="#">Home</a></li>
+      <li ><a href="file:///D:/WebReport/DailyReport.html">Daily Report</a></li>
+      <li><a href="file:///D:/WebReport/test.html">Test</a></li>
+	  <li ><a href="file:///D:/WebReport/Project.html">Project</a></li>
+	  <li class="active"><a href="file:///D:/WebReport/Personal.html">Personnel</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	  
@@ -123,9 +123,9 @@
 
 <div class="list-group list-group-mine text-center" style="padding: 30px 100px;">
 	<h2 class="h-project" style="color:white;">Personal</h2>
-  <a href="file:///D:/Project/WebReport/PersonalInfo.html" class="list-group-item" href="/path"><strong>Name1</strong></a>
-  <a href="file:///D:/Project/WebReport/PersonalInfo.html" class="list-group-item" href="/path"><strong>Name 2</strong></a>
-  <a href="file:///D:/Project/WebReport/PersonalInfo.html" class="list-group-item" href="/path"><strong>Name 3</strong></a>
+  <a href="file:///D:/WebReport/PersonalInfo.html" class="list-group-item" href="/path"><strong>Name1</strong></a>
+  <a href="file:///D:/WebReport/PersonalInfo.html" class="list-group-item" href="/path"><strong>Name 2</strong></a>
+  <a href="file:///D:/WebReport/PersonalInfo.html" class="list-group-item" href="/path"><strong>Name 3</strong></a>
 </div>
 
 	
