--- a/test.html
+++ b/test.html
@@ -99,11 +99,11 @@
   <div class="container-fluid">
   
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="file:///D:/Project/WebReport/DailyReport.html">Daily Report</a></li>
-      <li class="active"><a href="file:///D:/Project/WebReport/test.html">Test</a></li>
-	  <li><a href="file:///D:/Project/WebReport/Admin.html">Project</a></li>
-	    <li><a href="file:///D:/Project/WebReport/Personal.html">Personnel</a></li>
+   <li><a href="#">Home</a></li>
+      <li ><a href="file:///D:/WebReport/DailyReport.html">Daily Report</a></li>
+      <li class="active"><a href="file:///D:/WebReport/test.html">Test</a></li>
+	  <li><a href="file:///D:/WebReport/Project.html">Project</a></li>
+	  <li ><a href="file:///D:/WebReport/Personal.html">Personnel</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	  
