--- a/DailyReport.html
+++ b/DailyReport.html
@@ -103,7 +103,7 @@
       <li class="active"><a href="file:///D:/WebReport/DailyReport.html">Daily Report</a></li>
       <li><a href="file:///D:/WebReport/test.html">Test</a></li>
 	  <li><a href="file:///D:/WebReport/Project.html">Project</a></li>
-	  <li ><a href="file:///D:/WebReport/Personal.html">Personnel</a></li>
+	  <li ><a href="file:///D:/WebReport/Personal.html">Personal</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	  
