--- a/PersonalInfo.html
+++ b/PersonalInfo.html
@@ -138,7 +138,7 @@
       <li><a href="file:///D:/WebReport/DailyReport.html">Daily Report</a></li>
       <li><a href="file:///D:/WebReport/test.html">Test</a></li>
 	  <li><a href="file:///D:/WebReport/Project.html">Project</a></li>
-	  <li  class="active"><a href="file:///D:/WebReport/Personal.html">Personnel</a></li>
+	  <li  class="active"><a href="file:///D:/WebReport/Personal.html">Personal</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
