--- a/ProjectInfo.html
+++ b/ProjectInfo.html
@@ -126,7 +126,7 @@
       <li ><a href="file:///D:/WebReport/DailyReport.html">Daily Report</a></li>
       <li><a href="file:///D:/WebReport/test.html">Test</a></li>
 	  <li class="active"><a href="file:///D:/WebReport/Project.html">Admin</a></li>
-	  <li ><a href="file:///D:/WebReport/Personal.html">Personnel</a></li>
+	  <li ><a href="file:///D:/WebReport/Personal.html">Personal</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	  
