--- a/DailyReport.html
+++ b/DailyReport.html
@@ -1,137 +1,150 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
- <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title>Personal</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen"
      href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
 	<link rel="stylesheet" href="css/Mycss.css"/>
-	<style>
-	a:active{
-    color: black;
-}
-	.navbar {
-	  padding-top: 0px;
-	  padding-bottom: 0px;
-	  border: 0;
-	  border-radius: 0;
-	  margin-bottom: 0;
-	  font-size: 14px;
-	  letter-spacing: 3px;
-	}	
+  <style>
+  body {
+      position: relative; 
+	  	  background-color:#92D050;
+  }
+  
+  .affix {
+      top:0;
+      width: 100%;
+      z-index: 9999 !important;
+  }
+  .navbar {
+      margin-bottom: 0px;
+  }
+
+  .affix ~ .container-fluid {
+     position: relative;
+     top: 50px;
+  }
+  
+  #section1 {padding-top:0px;  padding-bottom:600px; height:auto;color: #fff; background-color: #151515;}
+  #section2 {padding-top:50px;height:auto;color: #fff; background-color: #92D050;}
+
+    <!---CSS Project info!-->
+  iframe.location {
+	
+		margin-left: 20%;
+		margin-right: 20%;
+		
+		width: 60%;
+		
+		}
 	h{ 
 		padding-top: 20px;
 		padding-bottom: 20px;
 		font-size:40px;
 		color:white;
-		margin-left:10px;}
+		margin-left:10px;
+		}
 	p {
 		font-size: 14px;
-		white-space: nowrap;
 		
 		}
-	div2 {
-	margin-left: 10px;
-    white-space: nowrap;
-	overflow-x: auto
+		
+	p.head {	
+		margin-top: 30px;
+		font-size: 14px;
+		font-weight: bold;
+		color:#92D050; 
+		text-align:center;
+		white-space: nowrap;
 	}
-	
-	label { margin-left:15px;}
-	button-view { margin-left:20px;}
-	.btn
-		{
-		color:white;
-		background-color: #1C2833    ;
-		border-color: #1C2833    ;
-		}
-	input {pandding-top:10px; }
-	topic { margin-left: 40px;
-			font-weight: bold;
-			white-space: nowrap;
-			overflow-x: auto}
+	p.info {
+		font-size: 14px;
+		color:#FFFF;
+		font-weight: normal;
+		text-align:center;
+		white-space: nowrap;
+	}
+	thead.head {
+		font-size: 14px;
+		color:#92D050;
+		font-weight: normal;
+	}
+	tbody.info {
+		font-size: 14px;
+		color:#FFFF;
+		font-weight: normal;
+	}
+		
+				
 			
-	}
-	 
-	 .bg-1 { 
-      background-color: #92D050; /* Green */
-      color: #ffffff;
+	.h-project{ 			
+				font-weight: 30px;
+				text-align:center;
+				
 		}
-	.container-fluid-1 {
-      padding-top: 70px;
-      padding-bottom: 70px;
-	  background-color: #92D050;
-	  
-	
+	h1.bold{font-weight:bold;}
+	Searchbar {padding-left:20px;}
+  </style>
+</head>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-
-	</style>
- </head>
-  <body style="background-color:#151515;">
- <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-
-<!-- First Container -->
-
-<div class="container-fluid-1">
-  <h class="margin">Daily Report</h>
- 
+<div class="container-fluid " style="background-color:#92D050;color:#fff;height:200px;">
+  <h1 class="bold">Daily report</h1>
+  
 </div>
-  
-  
-  
-  
-  <!--nav!-->
-<div>
-  <nav class="navbar navbar-inverse">
+
+<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
   <div class="container-fluid">
-  
-    <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
-      <li class="active"><a href="file:///D:/WebReport/DailyReport.html">Daily Report</a></li>
-      <li><a href="file:///D:/WebReport/test.html">Test</a></li>
-	  <li><a href="file:///D:/WebReport/Project.html">Project</a></li>
-	  <li ><a href="file:///D:/WebReport/Personal.html">Personal</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-	  
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
+
+ 
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+			<li><a href="file:///D:/WebReport/index.html#">Home</a></li>
+          <li><a href="file:///D:/WebReport/DailyReport.html#">Daily Report</a></li>
+          <li><a href="file:///D:/WebReport/Project.html#">Project</a></li>
+		   <li><a href="file:///D:/WebReport/Personal.html#">Personal</a></li>
+
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="file:///D:/WebReport/test.html#">test <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="file:///D:/WebReport/test.html#">Test-1</a></li>
+              <li><a href="#section42">Section 4-2</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-</nav>
-</div>
+</nav>    
+
+<div id="section1" class="container-fluid">
 
 
-<!--daylireport select date-->	
-    <div class="well well-sm" style="background-color:#FFFF;">
+<!--dailyreport select date-->	
+    <div class="well well-sm" style=" background-color:#FFFF; color:#151515;">
 	<topic>Daily</topic>
-	<div2 id="datetimepicker4" class="input-append">
+	<Searchbar id="datetimepicker4" class="input-append">
     <input data-format="dd-MM-yyyy" type="text" style="height:25px; margin:5px;"></input>  
     <span class="add-on" style="height:25px; weight:25;  margin-top:5px; margin-bottom:5px; " >
       <i data-time-icon="icon-time" data-date-icon="icon-calendar" s">
       </i>
     </span>
-	</div2>
+	</Searchbar>
 	
-
+	<Searchbar>
 	<label class="radio-inline"><input type="radio" name="optradio" checked>Weakly</label>
 	<label class="radio-inline"><input type="radio" name="optradio">Monthly</label>
 	<label class="radio-inline"><input type="radio" name="optradio">Yearly</label>
+	</Searchbar>
 	<!--sort! by -->
-	<topic>Sort by</topic>
+	<Searchbar>Sort by</Searchbar>
 			<div2 class="dropdown">
 			  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" >
 				Date
@@ -147,7 +160,7 @@
 	
 	<button-view type="button" class="btn">View report </button-view>
 	<!--search!-->
-	<topic>Search</Topic>
+	<Searchbar>Search</Searchbar>
 	<div2 class="dropdown">
 			  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 				All
@@ -197,9 +210,12 @@
  
 </div>
   
-	
-	
 
-	
-  </body>
-<html>
+<div id="section2" class="container-fluid">
+  <h1>End</h1>
+
+</div>
+
+
+</body>
+</html>
