--- a/DailyReport.html
+++ b/DailyReport.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen"
      href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
 	<link rel="stylesheet" href="css/Mycss.css"/>
+	<link rel="stylesheet" href="Webreport.css">
   <style>
   body {
       position: relative; 
@@ -36,6 +37,7 @@
   #section1 {padding-top:0px;  padding-bottom:600px; height:auto;color: #fff; background-color: #151515;}
   #section2 {padding-top:50px;height:auto;color: #fff; background-color: #92D050;}
 
+  
     <!---CSS Project info!-->
   iframe.location {
 	
@@ -101,6 +103,7 @@
   
 </div>
 
+<!---------------------------------------nav bar!------------------------------------------->
 <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
   <div class="container-fluid">
 
@@ -119,10 +122,17 @@
             </ul>
           </li>
         </ul>
+			<ul class="nav navbar-nav navbar-right">
+			    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			   <!--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>!-->
+			</ul>
       </div>
     </div>
   </div>
 </nav>    
+<!---------------------------------------nav bar!------------------------------------------->
 
 <div id="section1" class="container-fluid">
 
