--- a/Personal.html
+++ b/Personal.html
@@ -7,113 +7,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<link rel="stylesheet" href="Webreport.css">
   <style>
-  body {
-      position: relative; 
-	  background-color:#92D050;
-  }
   
- 
-	  <!-- table!-->
-	  
-	.table-hover {
-	margin-left:20%
-    border-collapse: collapse;
-    width: 60%;
-	}
-
-
-	.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-	  color: #151515;
-	}
-
-	.glyphicon-ok,.glyphicon-remove {
-	width:10%;margin-left:45%;
-	margin-right:45%;}
-	.glyphicon-ok{color: #00b300;}
-	.glyphicon-remove {color:#e60000;}
-  
-  .affix {
-      top:0;
-      width: 100%;
-      z-index: 9999 !important;
-  }
-  .navbar {
-      margin-bottom: 0px;
-  }
-
-  .affix ~ .container-fluid {
-     position: relative;
-     top: 50px;
-  }
-  
-  #section1 {padding-top:50px;  padding-bottom:200px; height:auto;color: #fff; background-color: #151515;}
-  #section2 {padding-top:50px;height:auto;color: #fff; background-color: #92D050;}
-
-    <!---CSS Project info!-->
-  iframe.location {
-	
-		margin-left: 20%;
-		margin-right: 20%;
-		
-		width: 60%;
-		
-		}
-	h{ 
-		padding-top: 20px;
-		padding-bottom: 20px;
-		font-size:40px;
-		color:white;
-		margin-left:10px;
-		}
-	p {
-		font-size: 14px;
-		
-		}
-		
-	p.head {	
-		margin-top: 30px;
-		font-size: 14px;
-		font-weight: bold;
-		color:#92D050; 
-		text-align:center;
-		white-space: nowrap;
-	}
-	p.info {
-		font-size: 14px;
-		color:#FFFF;
-		font-weight: normal;
-		text-align:center;
-		white-space: nowrap;
-	}
-	thead.head {
-		font-size: 14px;
-		color:#92D050;
-		font-weight: normal;
-	}
-	tbody.info {
-		font-size: 14px;
-		color:#FFFF;
-		font-weight: normal;
-	}
-		
-				
-			
-	.h-project{ 			
-				font-weight: 30px;
-				text-align:center;
-				
-		}
-	h1.bold{font-weight:bold;}
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 <div class="container-fluid " style="background-color:#92D050;color:#fff;height:200px;">
+
+
   <h1 class="bold">Daily report</h1>
   
 </div>
 
+<!---------------------------------------nav bar!------------------------------------------->
 <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
   <div class="container-fluid">
 
@@ -132,10 +40,17 @@
             </ul>
           </li>
         </ul>
+			<ul class="nav navbar-nav navbar-right">
+			    <li><a href="#"><span class="glyphicon glyphicon-user" style="color:gray;"></span> Profile</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			   <!--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>!-->
+			</ul>
       </div>
     </div>
   </div>
 </nav>    
+<!---------------------------------------nav bar!------------------------------------------->
 
 <div id="section1" class="container-fluid">
 <div class="container tbwidth">
@@ -144,30 +59,34 @@
   <table class="table table-hover" style="margin-top:50px; ">
     <thead>
       <tr style="color:#92D050;">
-        <th style="width:30%;">Firstname</th>
-        <th style="width:30%;">Lastname</th>
-        <th style="width:20%;">Lastest status</th>
-		 <th class="text-center" style="width:20%;">Daily report </th>
+	   <th style="width:20%;"><span id="usernameicon" class="glyphicon glyphicon-user"></span>Username</th>
+        <th style="width:25%;">Firstname</th>
+        <th style="width:25%;">Lastname</th>
+        <th style="width:15%;">Lastest status</th>
+		 <th class="text-center" style="width:15%;">Daily report </th>
       </tr>
     </thead>
     <tbody>
       <tr onclick="window.location='file:///D:/WebReport/PersonalInfo.html#';">
-        <td>John</td>
+         <td>John.D</td>
+		<td>John</td>
         <td>Doe</td>
         <td>Today</td>
-		<td><span class="glyphicon glyphicon-ok"></span></td>
+		<td class="text-center" ><span class="glyphicon glyphicon-ok"></span></td>
       </tr>
       <tr onclick="window.location='file:///D:/WebReport/PersonalInfo.html#';">
-        <td>Mary</td>
+         <td>Mary.M</td>
+		<td>Mary</td>
         <td>Moe</td>
         <td>Monday</td>
-		<td><span class="glyphicon glyphicon-remove"></span></td>
+		<td class="text-center" ><span class="glyphicon glyphicon-remove"></span></td>
       </tr>
       <tr onclick="window.location='file:///D:/WebReport/PersonalInfo.html#';">
-        <td>July</td>
+         <td>July.D</td>
+		<td>July</td>
         <td>Dooley</td>
         <td>Yesterday</td>
-		<td><span class="glyphicon glyphicon-remove"></span></td>
+		<td class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
       </tr>
     </tbody>
   </table>
