--- a/Project.html
+++ b/Project.html
@@ -7,85 +7,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+ <link rel="stylesheet" href="Webreport.css">
   <style>
-  
-  body {
-      position: relative; 
-  }
-  
-  .affix {
-      top:0;
-      width: 100%;
-      z-index: 9999 !important;
-  }
-  .navbar {
-      margin-bottom: 0px;
-  }
-
-  .affix ~ .container-fluid {
-     position: relative;
-     top: 50px;
-  }
-  
-  #section1 {padding-top:50px; padding-bottom:200px; height:auto;color: #fff; background-color: #151515;}
-  #section2 {padding-top:50px;height:auto;color: #fff; background-color: #92D050;}
-
-    <!---CSS Project info!-->
-  iframe.location {
-	
-		margin-left: 20%;
-		margin-right: 20%;
-		
-		width: 60%;
-		
-		}
-	h{ 
-		padding-top: 20px;
-		padding-bottom: 20px;
-		font-size:40px;
-		color:white;
-		margin-left:10px;
-		}
-	p {
-		font-size: 14px;
-		
-		}
-		
-	p.head {	
-		margin-top: 30px;
-		font-size: 14px;
-		font-weight: bold;
-		color:#92D050; 
-		text-align:center;
-		white-space: nowrap;
-	}
-	p.info {
-		font-size: 14px;
-		color:#FFFF;
-		font-weight: normal;
-		text-align:center;
-		white-space: nowrap;
-	}
-	thead.head {
-		font-size: 14px;
-		color:#92D050;
-		font-weight: normal;
-	}
-	tbody.info {
-		font-size: 14px;
-		color:#FFFF;
-		font-weight: normal;
-	}
-		
-				
-			
-	.h-project{ 			
-				font-weight: 30px;
-				text-align:center;
-				
-		}
-	h1.bold{font-weight:bold;}
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -95,6 +18,7 @@
   
 </div>
 
+<!---------------------------------------nav bar!------------------------------------------->
 <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
   <div class="container-fluid">
 
@@ -105,6 +29,7 @@
           <li><a href="file:///D:/WebReport/DailyReport.html#">Daily Report</a></li>
           <li><a href="file:///D:/WebReport/Project.html#">Project</a></li>
 		   <li><a href="file:///D:/WebReport/Personal.html#">Personal</a></li>
+
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="file:///D:/WebReport/test.html#">test <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="file:///D:/WebReport/test.html#">Test-1</a></li>
@@ -112,10 +37,17 @@
             </ul>
           </li>
         </ul>
+			<ul class="nav navbar-nav navbar-right">
+			    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			   <!--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>!-->
+			</ul>
       </div>
     </div>
   </div>
 </nav>    
+<!---------------------------------------nav bar!------------------------------------------->
 
 <div id="section1" class="container-fluid">
   <!--Project List !-->
