--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
   
 </div>
 
+
+<!---------------------------------------nav bar!------------------------------------------->
 <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
   <div class="container-fluid">
 
@@ -106,86 +108,46 @@
           <li><a href="file:///D:/WebReport/DailyReport.html#">Daily Report</a></li>
           <li><a href="file:///D:/WebReport/Project.html#">Project</a></li>
 		   <li><a href="file:///D:/WebReport/Personal.html#">Personal</a></li>
+
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="file:///D:/WebReport/test.html#">test <span class="caret"></span></a>
             <ul class="dropdown-menu">
-               <li><a href="file:///D:/WebReport/test.html#">Test-1</a></li>
+              <li><a href="file:///D:/WebReport/test.html#">Test-1</a></li>
               <li><a href="#section42">Section 4-2</a></li>
             </ul>
           </li>
         </ul>
+			<ul class="nav navbar-nav navbar-right">
+			    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
+			  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			   <!--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>!-->
+			</ul>
       </div>
     </div>
   </div>
 </nav>    
+<!---------------------------------------nav bar!------------------------------------------->
 
 <div id="section1" class="container-fluid">
-  <!--Project info!!-->
-
-
-<div class="container">
-<h4 class="text-center h-project" style="color:white;">Project</h4>
-
-  <h2 class="text-center h-project" style="color:#92D050;">DD</h2>            
-<p class="head">Company</p> 
-<p class="info">Dimension Data</p> 
-<p class="head">location </p>
-<iframe class="location" style ="width:60%; margin-left:20%; margin-right:20%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.7587483088973!2d100.5581165155708!3d13.733050801425849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f1d819578f7%3A0x10b0a6ef89b8d7a2!2sDimension+Data+Thailand!5e0!3m2!1sen!2sth!4v1537851039031" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-<!--Member of project!-->
- <p class="head">Member </p>
-  <table class="table">
-    <thead class="head">
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-		<th>Contact</th>
-      </tr>
-    </thead>
-    <tbody class="info">
-      <tr>
-        <td>John</p></td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-		<td>092-XXXXXXXX</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-		<td>092-XXXXXXXX</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-		<td>092-XXXXXXXX</td>
-      </tr>
-	  
-    </tbody>
-  </table>
-</div>
+  <h1>Section 1</h1>
+  
 
 </div>
 <div id="section2" class="container-fluid">
   <h1>Section 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  
 </div>
 <div id="section3" class="container-fluid">
   <h1>Section 3</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  
 </div>
 <div id="section41" class="container-fluid">
   <h1>Section 4 Submenu 1</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  
 </div>
 <div id="section42" class="container-fluid">
   <h1>Section 4 Submenu 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  
 </div>
 
 </body>
