--- a/Project.html
+++ b/Project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Example</title>
+  <title>Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -9,62 +9,36 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  <link rel="stylesheet" href="Webreport.css">
   <style>
+	
   </style>
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body >
 
-<div class="container-fluid " style="background-color:#92D050;color:#fff;height:200px;">
-  <h1 class="bold">Daily report</h1>
-  
-</div>
 
-<!---------------------------------------nav bar!------------------------------------------->
-<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
-  <div class="container-fluid">
-
- 
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-			<li><a href="file:///D:/WebReport/index.html#">Home</a></li>
-          <li><a href="file:///D:/WebReport/DailyReport.html#">Daily Report</a></li>
-          <li><a href="file:///D:/WebReport/Project.html#">Project</a></li>
-		   <li><a href="file:///D:/WebReport/Personal.html#">Personal</a></li>
-
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="file:///D:/WebReport/test.html#">test <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="file:///D:/WebReport/test.html#">Test-1</a></li>
-              <li><a href="#section42">Section 4-2</a></li>
-            </ul>
-          </li>
-        </ul>
-			<ul class="nav navbar-nav navbar-right">
-			    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-			  <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
-			  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			   <!--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>!-->
-			</ul>
-      </div>
-    </div>
-  </div>
-</nav>    
-<!---------------------------------------nav bar!------------------------------------------->
 
 <div id="section1" class="container-fluid">
   <!--Project List !-->
-
-<div class="list-group list-group-mine text-center" style="pading-top:30px; padding-left:20%; padding-right:20%;">
-	<h2 class="h-project" style="color:white; margin-bottom:30px;">Project</h2>
+<div class="box-Project">
+	</span><a href="file:///D:/WebReport/AddProject.html" id="AddProject"  class="btn btn-info" role="button">Add Location<span id="AddProjecticon" class="glyphicon glyphicon-plus"></a> 
+	</span><a href="file:///D:/WebReport/AddProject.html" id="AddProject"  class="btn btn-info" role="button">Add Project<span id="AddProjecticon" class="glyphicon glyphicon-plus"></a> 
+	<br>
+<div id="ListProject" class="list-group list-group-mine text-center" >
+	<h2 id="HeadBox" >Project</h2> 
+	<br>
   <a href="file:///D:/WebReport/ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 1</strong></a>
   <a href="file:///D:/WebReport/ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 2</strong></a>
   <a href="file:///D:/WebReport/ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 3</strong></a>
 </div>
+<br>
 </div>
-
+</div>
 
 <div id="section2" class="container-fluid">
   <h1>End</h1>
 
 </div>
+
+
 
 
 </body>
