--- a/index.html
+++ b/index.html
@@ -1,154 +1,22 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-  body {
-      position: relative; 
-  }
-  
-  .affix {
-      top:0;
-      width: 100%;
-      z-index: 9999 !important;
-  }
-  .navbar {
-      margin-bottom: 0px;
-  }
-
-  .affix ~ .container-fluid {
-     position: relative;
-     top: 50px;
-  }
-  
-  #section1 {padding-top:50px;height:auto;color: #fff; background-color: #151515;}
-  #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
-  #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
-  #section41 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
-  #section42 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
-  
-    <!---CSS Project info!-->
-  iframe.location {
-	
-		margin-left: 20%;
-		margin-right: 20%;
-		
-		width: 60%;
-		
-		}
-	h{ 
-		padding-top: 20px;
-		padding-bottom: 20px;
-		font-size:40px;
-		color:white;
-		margin-left:10px;
-		}
-	p {
-		font-size: 14px;
-		
-		}
-		
-	p.head {	
-		margin-top: 30px;
-		font-size: 14px;
-		font-weight: bold;
-		color:#92D050; 
-		text-align:center;
-		white-space: nowrap;
-	}
-	p.info {
-		font-size: 14px;
-		color:#FFFF;
-		font-weight: normal;
-		text-align:center;
-		white-space: nowrap;
-	}
-	thead.head {
-		font-size: 14px;
-		color:#92D050;
-		font-weight: normal;
-	}
-	tbody.info {
-		font-size: 14px;
-		color:#FFFF;
-		font-weight: normal;
-	}
-		
-				
-			
-	.h-project{ 			
-				font-weight: 30px;
-				text-align:center;
-				
-		}
-	h1.bold{font-weight:bold;}
-  </style>
-</head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-
-<div class="container-fluid " style="background-color:#92D050;color:#fff;height:200px;">
-  <h1 class="bold">Daily report</h1>
-  
-</div>
-
-
-<!---------------------------------------nav bar!------------------------------------------->
-<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
-  <div class="container-fluid">
+<head><title> Daily Report </title></head>
+<style>
 
  
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-			<li><a href="file:///D:/WebReport/index.html#">Home</a></li>
-          <li><a href="file:///D:/WebReport/DailyReport.html#">Daily Report</a></li>
-          <li><a href="file:///D:/WebReport/Project.html#">Project</a></li>
-		   <li><a href="file:///D:/WebReport/Personal.html#">Personal</a></li>
+  </style>
+<frameset rows="100,50,*" cols="*" frameboder="no" border="0" framespacing="0">
 
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="file:///D:/WebReport/test.html#">test <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="file:///D:/WebReport/test.html#">Test-1</a></li>
-              <li><a href="#section42">Section 4-2</a></li>
-            </ul>
-          </li>
-        </ul>
-			<ul class="nav navbar-nav navbar-right">
-			    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-			  <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
-			  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			   <!--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>!-->
-			</ul>
-      </div>
-    </div>
-  </div>
-</nav>    
-<!---------------------------------------nav bar!------------------------------------------->
+<frame src="header.html" name="topFrame" scrolling="No"noresize="noresize" id="topFrame" title="topFrame">
+<frame src="NavBar.html" name="topFrame" scrolling="No"noresize="noresize" id="topFrame" title="topFrame">
 
-<div id="section1" class="container-fluid">
-  <h1>Section 1</h1>
-  
+<frameset cols="100" frameboder="no" border="0" framespacing="0">
 
-</div>
-<div id="section2" class="container-fluid">
-  <h1>Section 2</h1>
-  
-</div>
-<div id="section3" class="container-fluid">
-  <h1>Section 3</h1>
-  
-</div>
-<div id="section41" class="container-fluid">
-  <h1>Section 4 Submenu 1</h1>
-  
-</div>
-<div id="section42" class="container-fluid">
-  <h1>Section 4 Submenu 2</h1>
-  
-</div>
+	
 
-</body>
+	<frame src="home.html" name="mainFrame" id="mainFrame" title="mainFrame">
+
+</frameset>
+
+</frameset>
+
 </html>
