--- a/Project.html
+++ b/Project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <title>Project</title>
@@ -19,15 +19,15 @@
 <div id="section1" class="container-fluid">
   <!--Project List !-->
 <div class="box-Project">
-	</span><a href="file:///D:/WebReport/AddProject.html" id="AddProject"  class="btn btn-info" role="button">Add Location<span id="AddProjecticon" class="glyphicon glyphicon-plus"></a> 
-	</span><a href="file:///D:/WebReport/AddProject.html" id="AddProject"  class="btn btn-info" role="button">Add Project<span id="AddProjecticon" class="glyphicon glyphicon-plus"></a> 
+	</span><a href="AddProject.html" id="AddProject"  class="btn btn-info" role="button">Add Location<span id="AddProjecticon" class="glyphicon glyphicon-plus"></a> 
+	</span><a href="AddProject.html" id="AddProject"  class="btn btn-info" role="button">Add Project<span id="AddProjecticon" class="glyphicon glyphicon-plus"></a> 
 	<br>
 <div id="ListProject" class="list-group list-group-mine text-center" >
 	<h2 id="HeadBox" >Project</h2> 
 	<br>
-  <a href="file:///D:/WebReport/ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 1</strong></a>
-  <a href="file:///D:/WebReport/ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 2</strong></a>
-  <a href="file:///D:/WebReport/ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 3</strong></a>
+  <a href="ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 1</strong></a>
+  <a href="ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 2</strong></a>
+  <a href="ProjectInfo.html" class="list-group-item" href="/path"><strong>Project 3</strong></a>
 </div>
 <br>
 </div>
