--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <title>Add Project</title>
@@ -12,8 +12,10 @@
 	src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
 	</script>
   <style>
- 
 
+      .alert-field {
+          color: red;
+      }  
 
  
   </style>
@@ -26,19 +28,21 @@
   <h2 id="HeadBox">Login</h2>
   <br>
 
-  <form>
-    <div class="form-group">
-      <label for="project_name">Username :</label>
-      <input type="text" class="form-control" id="project_name">
-    </div>
-    <div class="form-group">
-      <label for="project_company">Password:</label>
-      <input type="Password" class="form-control" id="project_company">
-    </div>
+
+      <div class="form-group">
+          <label for="username">Username :</label>
+          <input type="text" class="form-control" id="username">
+          <p class="alert-field" id="username_required"></p>
+      </div>
+      <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="Password" class="form-control" id="password">
+          <p class="alert-field" id="password_required"></p>
+      </div>
 	 
-  </form>
+
   <br>
-  <a href="#" id="loginbtn" type="button" class="btn btn-primary">Login</a>
+  <a href="#" id="loginbtn" type="button" class="btn btn-primary" onclick="UserLogin()">Login</a>
 </div> 
 
 </div>
@@ -47,6 +51,32 @@
   
 </div>
 
+<script>
+    function UserLogin() {
+        var username, password, username_required, password_required;
+        
+
+        username = document.getElementById("username").value;
+        password = document.getElementById("password").value;
+
+
+        if (username == "") {
+            username_required = "Please enter your username.";
+        } else {
+            username_required = "";
+        }
+        if (password == "") {
+            password_required = "Please enter your password.";
+        } else {
+            password_required = "";
+        }
+
+        document.getElementById("username_required").innerHTML = username_required;
+        document.getElementById("password_required").innerHTML = password_required;
+     
+    }
+
+</script>
 
 </body>
 </html>
